  Improvements:
    - Added advanced beam turret
  Tweaks:
    - Changed lightning turret to an AOE projectile due the line beam attacks not working properly
    - Increased cannon and rapid cannon min range to 12
    - Increased gun turret mk2 range to 24
    - Added new advanced beam turret research
    - Added advanced beam turret research to prerequisite to advanced laser turret 3

---------------------------------------------------------------------------------------------------
Version: 0.17.12
Date: 4. 21. 2019
  Tweaks:
    - Readded min range and project creation for advanced laser when non colliding mod settings is checked
    - Set non colliding advanced laser projectile by default to checked
    - Increased capsule launcher turret cooldown to 450
    - Reduced capsule launcher turren damage modifier to 1.5
  Bugfixes:
    - Fixed skewed damage values due to migration, by invoking tech effect reset
    - Fixed update_next on advanced accumulator and solar panel
    - Fixed minable on advanced accumulator and solar panel
    - Fixed adv and nuclear car and tank remaining bobs vehicle equipment integration
    - Fixed advance accumulator research locale name    

---------------------------------------------------------------------------------------------------
Version: 0.17.11
Date: 4. 20. 2019
  Bugfixes:
    - Fixed vanilla shotgun and cannon shells not being including in the colliding setting

---------------------------------------------------------------------------------------------------
Version: 0.17.10
Date: 4. 14. 2019
  Improvements:
    - Added an advanced solar panel that is x16 the size of normal with 50% more output than x16 normal solar panels. Can be toggled off in mod settings.
    - Added an advanced accumulator that is x9 the size of normal with 50% more output than x9 normal accumulators. Can be toggled off in mod settings.